# ray-tracer-rs

./: .gitignore  Cargo.toml  LICENSE  Notes.md  README.md
.github/workflows/: raytracer.yml
image_sample/: ZoomInCamera.ppm  antialiasing.ppm  defocusBlur.ppm  dielectric.ppm  diffuse.ppm  distantCamera.ppm  finalScene.ppm  gamma_corrected.ppm  metal_material.ppm  shadow_acne_fixed.ppm  surface_normal.ppm  true_lambertian_reflection.ppm  wideAngleCamera.ppm
src/: camera.rs  image.rs  lib.rs  main.rs
src/core/: color.rs  image.rs  mod.rs  point3.rs  ray.rs  vec3.rs
src/geometry/: hit.rs  mod.rs  sphere.rs
src/infrastructure/: vec3.rs
src/materials/: dielectric.rs  lamberian.rs  lambertian.rs  metal.rs  mod.rs
src/misc/: samples.rs
src/utils/: utils.rs
