[package]
name = "RayTracing"
version = "0.1.0"
authors = ["Alohayo <garfield.bupt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "raytracing"
path = "src/lib.rs"

[[bin]]
name = "raytracing"
path = "src/main.rs"

[dependencies]
rand = "0.7.3"